--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/server/.js",
+    "dropbank": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,9 +21,15 @@
   },
   "homepage": "https://github.com/EsGui/cadastro-de-usuarios-back-end#readme",
   "dependencies": {
-    "express": "4.17.1"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "4.17.1",
+    "mysql2": "2.1.0",
+    "sequelize": "6.3.4"
   },
   "devDependencies": {
-    "nodemon": "2.0.15"
+    "nodemon": "2.0.15",
+    "sequelize-cli": "6.2.0"
   }
 }
