--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/server/.js",
+    "dev": "nodemon src/index.js",
     "dropbank": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
