--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cadastro-de-usuarios-back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "engines": {
     "node": "14.x"
