--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "cadastro-de-usuarios-back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/app.js",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "dropbank": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
